--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Minha Aplicação Mudada</title>
 </head>
 <body>
+    <a href="./cadastro.html">Cadastrar Estudante</a>
+    <h1>Lista de Estudantes</h1>
     <ul id="minhalista">
     </ul>
 
